<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item android:title="@string/schedule">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_class_time"
                    android:icon="@drawable/ic_schedule_black_24dp"
                    android:title="@string/class_time" />
                <item
                    android:id="@+id/nav_exam_time"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/exam_time" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_grade_and_absence"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/grade_amp_absence" />


    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
